testing NBViewer with events

--- a/dynamic/py/mapbox_icerink.ipynb
+++ b/dynamic/py/mapbox_icerink.ipynb
@@ -110,9 +110,9 @@
     "\n",
     "        if coords_df['x'] is not None:\n",
     "\n",
-    "            #must reverse lat(y) & lon(x)\n",
-    "            lat = coords_df['y']\n",
-    "            lon = coords_df['x']\n",
+    "            #must reverse lat(y) & lon(x) otherwise appears backwards\n",
+    "            lat = coords_df['x']\n",
+    "            lon = coords_df['y']\n",
     "            for i in [lat]:\n",
     "                latitude.append(i)\n",
     "            for i in [lon]:\n",
