--- a/finals/py/Check_In1.ipynb
+++ b/finals/py/Check_In1.ipynb
@@ -12912,7 +12912,8 @@
     "import chart_studio.plotly as py\n",
     "from plotly.offline import iplot\n",
     "\n",
-    "mapbox_access_token = open(\"mapbox_token.txt\").read() # Create a local file with mapbox token\n",
+    "token = os.getenv('MAPBOX_ACCESS_TOKEN')\n",
+    "# mapbox_access_token = open(\"mapbox_token.txt\").read() # Create a local file with mapbox token\n",
     "\n",
     "df = pd.read_csv('2019SCF_events.csv')\n",
     "\n",
@@ -13249,7 +13250,7 @@
     "        borderwidth=2\n",
     "    ),\n",
     "    mapbox=dict(\n",
-    "        accesstoken=mapbox_access_token,\n",
+    "        accesstoken=token,\n",
     "        center=dict(\n",
     "            lat=0,\n",
     "            lon=0\n",
