imported os python library

--- a/finals/py/Check_In1.ipynb
+++ b/finals/py/Check_In1.ipynb
@@ -12911,6 +12911,7 @@
     "import plotly.express as px\n",
     "import chart_studio.plotly as py\n",
     "from plotly.offline import iplot\n",
+    "import os\n",
     "\n",
     "token = os.getenv('MAPBOX_ACCESS_TOKEN')\n",
     "# mapbox_access_token = open(\"mapbox_token.txt\").read() # Create a local file with mapbox token\n",
