checking mapbox token restrictions

--- a/finals/py/Check_In1.ipynb
+++ b/finals/py/Check_In1.ipynb
@@ -12913,7 +12913,11 @@
     "from plotly.offline import iplot\n",
     "import os\n",
     "\n",
-    "token = os.getenv('MAPBOX_ACCESS_TOKEN')\n",
+    "# Token only compatible with the following URLs:\n",
+    "# https://notebooks.gesis.org/binder/jupyter/user/vanmeciv-icerinks-j6klowd1/notebooks/finals/py/Check_In1.ipynb\n",
+    "# https://github.com/vanmeciv/icerinks/blob/master/finals/py/Check_In1.ipynb\n",
+    "token = os.getenv('pk.eyJ1IjoiaXNhYWN2IiwiYSI6ImNrYzFhZmo2ZDFrMXgyenBrMjV6djUwN2wifQ.JW0mZHvA6rNw9IiJOD8K9w')\n",
+    "# token = os.getenv('MAPBOX_ACCESS_TOKEN')\n",
     "# mapbox_access_token = open(\"mapbox_token.txt\").read() # Create a local file with mapbox token\n",
     "\n",
     "df = pd.read_csv('2019SCF_events.csv')\n",
