testing alt token

--- a/finals/py/Game_2.ipynb
+++ b/finals/py/Game_2.ipynb
@@ -14916,7 +14916,7 @@
     "# #     coordinates_df.to_json(r'events.json')\n",
     "\n",
     "# mapbox_access_token = os.getenv('')\n",
-    "mapbox_access_token = open(\"mapbox_token.txt\").read() # Create a local file with mapbox token\n",
+    "mapbox_access_token = open(\"game2.txt\").read() # Create a local file with mapbox token\n",
     "\n",
     "# df = pd.read_csv('2019SCF_events.csv')\n",
     "\n",
@@ -15326,7 +15326,7 @@
     "    width=800,\n",
     "    height=500,\n",
     "    margin={\"r\":10,\"t\":40,\"l\":10,\"b\":20},\n",
-    "    title='2019 Stanley Cup Finals (Game 1)',\n",
+    "    title='2019 Stanley Cup Finals (Game 2)',\n",
     "    autosize=False,\n",
     "    hovermode='closest',\n",
     "    hoverlabel=dict(\n",
