--- a/finals/py/Game_2.ipynb
+++ b/finals/py/Game_2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Display Data"
+    "# Display Data (Game 2)"
    ]
   },
   {
