testing individual tokens

--- a/finals/py/Game_2.ipynb
+++ b/finals/py/Game_2.ipynb
@@ -16678,7 +16678,7 @@
     "# #     coordinates_df.to_json(r'events.json')\n",
     "\n",
     "# mapbox_access_token = os.getenv('')\n",
-    "mapbox_access_token = open(\"mapbox_token.txt\").read() # Create a local file with mapbox token\n",
+    "mapbox_access_token = open(\"game2.txt\").read() # Create a local file with mapbox token\n",
     "\n",
     "# df = pd.read_csv('2019SCF_events.csv')\n",
     "\n",
